--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav class="container">
+		<ul class="row1">
+			<li>Product</li>
+			<li>Testimonials</li>
+			<li class="none">Pricing</li>
+		</ul>
+			<ul class="row2">
+			<li>Team</li>
+			<li>Contact Us</li>
+		</ul>
+	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
