--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<ul class="row1">
 			<li>Product</li>
 			<li>Testimonials</li>
-			<li class="none">Pricing</li>
+			<li>Pricing</li>
 		</ul>
 			<ul class="row2">
 			<li>Team</li>
